# FR3CBFSim

./: .gitignore  MANIFEST.in  README.md  cbfqp.py  setup.cfg  waypoint_tracking.py
FR3CBFSim/: cbfqp.py  combined_cbfqp_demo.py  inverse_dynamics_demo.py  kinematics_controller.py  target_reaching_combined_qp_solver.py  waypoint_tracking.py
FR3CBFSim/cbfs/: __init__.py  end_effector_cbf_box.py
FR3CBFSim/controllers/: cbfqp.py  combined_cbfqp.py  combined_cbfqp_solver.py  combined_qp_solver.py  inverse_dynamics_controller.py  kinematics_controller_solver.py  utils.py
FR3CBFSim/robots/: hole_in_wall.urdf  wall.urdf
cbfs/: __init__.py  end_effector_cbf_box.py
notebooks/: EndEffectorTrajPlot.ipynb
