[metadata]
name = FR3CBFSim
version = 0.0.0
description = Simulations for testing CBF-based control on FR3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BolunDai0216/FR3CBFSim
author = Bolun Dai
author_email = bd1555@nyu.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    fr3cbfsim-waypoint-tracking = FR3CBFSim.waypoint_tracking:main
